[gd_scene load_steps=6 format=3 uid="uid://df1hlbdkfr7jb"]

[ext_resource type="Texture2D" uid="uid://bf7dl75yscagw" path="res://Main/ServerStatusWidget/background.png" id="1_8yqin"]
[ext_resource type="Texture2D" uid="uid://pjmqreo3yadj" path="res://Main/ServerStatusWidget/connected.png" id="1_wworw"]
[ext_resource type="Script" path="res://Main/ServerStatusWidget/serverStatusWidget.gd" id="2_i46ex"]
[ext_resource type="Texture2D" uid="uid://dctpdykjssd1l" path="res://Main/ServerStatusWidget/update.png" id="2_y1dg4"]

[sub_resource type="LabelSettings" id="LabelSettings_lx57m"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="ServerStatusWidget" type="TextureRect"]
custom_minimum_size = Vector2(648, 125)
offset_right = 648.0
offset_bottom = 125.0
texture = ExtResource("1_8yqin")
stretch_mode = 2
script = ExtResource("2_i46ex")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 125.0
grow_horizontal = 2

[node name="ConnectedTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.144
anchor_right = 0.026
anchor_bottom = 0.144
offset_left = 0.152
offset_right = 128.152
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_wworw")

[node name="ConnectedLabel" type="Label" parent="ConnectedTexture"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.617
anchor_top = 0.82
anchor_right = 0.617
anchor_bottom = 0.82
offset_left = 2.45258
offset_top = 0.754295
offset_right = 75.4526
offset_bottom = 34.7543
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "online"
label_settings = SubResource("LabelSettings_lx57m")
text_direction = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 535.0
offset_top = 17.0
offset_right = 663.0
offset_bottom = 145.0
grow_horizontal = 0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_y1dg4")
